src/objects/Effective_Commission_Multiplier_Date__c.object
<CustomObject>
    <fields>
        <fullName>Commission_Multiplier__c</fullName>
        <label>Commission Multiplier</label>
        <referenceTo>Commission_Multiplier__c</referenceTo>
        <relationshipName>Effective_Commission_Multiplier_Dates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Multiplier__c</fullName>
        <label>Multiplier</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Effective Commission Multiplier Date</label>
    <nameField>
        <label>Effective Commission Multiplier Dates Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Effective Commission Multiplier Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>